# umtproject2026

./: .dockerignore  .gitignore  Dockerfile  main.py  ocr_api_guide.md  pyproject.toml
routers/: agent_router.py  chat_router.py  ocr_router.py  ocr_router2.py
services/: image_to_text.py  image_to_text2.py
