[project]
name = "umt-project-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
