[project]
name = "umt-project-2026"
version = "0.1.0"
description = "UMT Student Assistant API"
readme = "README.md"
requires-python = ">=3.11,<4.0.0"

dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.3.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "pillow>=11.0.0",
    "google-generativeai>=0.8.0",
]